--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,9 @@ platform = espressif8266
 framework = arduino
 board = nodemcuv2
 extra_scripts = extra_script.py
-build_flags=
+build_flags = 
 	-Ilib -Isrc
 lib_deps = 
 	milesburton/DallasTemperature@^3.11.0
 	paulstoffregen/OneWire@^2.3.8
+	bblanchon/ArduinoJson@^7.1.0
